fix: use always visible icon and text for panel buttons

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -38,47 +38,28 @@
 }
 
 .panel-button {
-    position: relative;
-    --button-border-color: #ccc;
-    width: 3rem;
-    height: 3rem;
     margin: 0.5rem;
 }
 
 .panel-button > button {
+    --button-border-color: #ccc;
     display: flex;
     padding: 0;
-    width: 100%;
-    height: 100%;
     background-color: rgba(255,255,255,0);
     border: solid 1px var(--button-border-color);
     transition: background-color 0.1s;
+    align-items: center;
 }
 
-.panel-button > button > * {
-    margin: 0;
-    padding: 0;
+.panel-button > button > .icon {
+    display: flex;
+    width: 3rem;
+    height: 3rem;
 }
 
-.panel-button > label {
-    position: absolute;
-    font-size: 80%;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%) translateY(calc(100% + 0.25rem));
-    visibility: hidden;
-    opacity: 0;
-    color: white;
-    padding: 0.25rem;
-    border-radius: 0.25rem;
-    background-color: rgba(0, 0, 0, 0.9);
-    transition: transform 0.1s, opacity 0.1s;
-    z-index: var(--z-index-overlay, 1);
-}
-
-.panel-button:hover > label {
-    visibility: visible;
-    opacity: 1;
+.panel-button > button > .label {
+    border-left: solid 1px var(--button-border-color);
+    padding: 0.5rem;
 }
 
 .panel-button:hover {
